--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,12 @@ code {
   height: 50px;
 }
 
+.emptyCell {
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+
 .cell {
   text-align: center;
   display: flex;
