--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ code {
   outline-color: red;
 }
 
+.crossword-board__item-label-text {
+	top: 2px;
+	left: 2px;
+	font-size: 1px;
+	line-height: 1;
+}
 .cell {
   text-align: center;
   display: flex;
@@ -59,6 +65,10 @@ code {
   font-size: 2.0em;
 }
 
+.gridWrapper {
+  display: grid;
+}
+
 .highlighted {
   background-color: yellow;
 }
@@ -74,6 +84,8 @@ code {
   font-weight: bold;
 }
 
-.grid {
-  display: inline-block;
+.inner-div {
+  top: 0px;
+  right: 0px;
+  font-size: 12px;
 }
