--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,25 @@ code {
   right: 0px;
   font-size: 12px;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: block;
+}
+
+.modal-main {
+  position:fixed;
+  background: lightpink;
+  width: 80%;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
+
+
